--- a/tags/0.463/Easy2D.Runtime/Easy2D.Runtime.csproj
+++ b/tags/0.463/Easy2D.Runtime/Easy2D.Runtime.csproj
@@ -12,18 +12,17 @@
     <AssemblyName>EasyMotion2D.Runtime</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>false</SignAssembly>
+    <SignAssembly>False</SignAssembly>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
+    <DebugSymbols>True</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>False</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -32,7 +31,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
+    <Optimize>True</Optimize>
     <OutputPath>..\Easy2D.Test\Assets\EasyMotion2D\Runtime\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -58,7 +57,6 @@
     <Compile Include="Animation\SpriteAnimation_PlaybackControl.cs" />
     <Compile Include="BitmapFont.cs" />
     <Compile Include="Camera2D.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer\SpritePrimitive.cs" />
     <Compile Include="Renderer\SpriteTransform.cs" />
     <Compile Include="Sprite.cs" />
@@ -92,4 +90,7 @@
   <PropertyGroup>
     <PreBuildEvent>"$(ProjectDir)Properties\GenerateAssemblyInfo.bat" "$(ProjectDir)" ./Properties/AssemblyInfo.tpl ./Properties/AssemblyInfo.cs</PreBuildEvent>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 </Project>
