--- a/tags/0.463/Easy2D.Runtime/Easy2D.Runtime.csproj
+++ b/tags/0.463/Easy2D.Runtime/Easy2D.Runtime.csproj
@@ -42,7 +42,7 @@
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\Program Files\Unity3.5\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
